# SteadyTap

./: .gitignore  CLOUDFLARE_PAGES.md  CONTRIBUTING.md  Makefile  Package.swift  README.md  RootView.swift  SECURITY.md  SERVICE_GRADE_SPECKIT.ko.md  SPECKIT.md  SteadyTapApp.swift  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
Core/: AppViewModel.swift  BackendClient.swift  CalibrationEngine.swift  Extensions.swift  HapticsManager.swift  InsightsEngine.swift  IntroQuickStartContent.swift  KeychainStore.swift  Models.swift  PersistenceStore.swift
Tests/: CalibrationEngineTests.swift  ModelsTests.swift  PersistenceStoreTests.swift  quick_start_content_regression.swift
Verification/: SteadyTapVerification.swift
Views/: CalibrationFlowView.swift  CalibrationReviewView.swift  IntroView.swift  PracticeView.swift  ResultsView.swift  SharedComponents.swift
app/: db.py  main.py  schemas.py  service.py
architecture/: blueprint.json
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  db.py  main.py  runtime_store.py  schemas.py  service.py
backend/infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
backend/scripts/: exercise_runtime.py
backend/tests/: test_api.py  test_cors.py
docs/: BUSINESS_OPERATIONS.md  COMMERCIALIZATION_INDEX.md  DEPLOYMENT_ACTIVATION.md  PAYMENTS_AND_REFUNDS_DRAFT.md  PRIVACY_POLICY_DRAFT.md  REVENUE_READINESS.md  architecture-evidence-map.md  cloud-ai-architecture.md  commercial-offer.md  conversion-ux-model.md  enterprise-readiness.md  monetization-playbook.md  openrouter-routing.md  portfolio-fit.md  (+12 more)
(+17 files in other folders)
