[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steadytap-backend"
version = "0.1.0"
description = "FastAPI backend for SteadyTap cloud sync and coach planning."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kim" }]
license = { text = "MIT" }
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.46.0",
  "pydantic==2.13.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.4.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
